Hw1_group(กลุ้ม)_finish

--- a/Frequent_Patterns_(Association_Rules).ipynb
+++ b/Frequent_Patterns_(Association_Rules).ipynb
@@ -26953,6 +26953,24 @@
       "metadata": {
         "id": "zhr0aNgW1bxP"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###link slide (pdf)"
+      ],
+      "metadata": {
+        "id": "JVLrlQO_cdUU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://drive.google.com/file/d/15i4MAEVaUnUO_0wkAdu9Rs1YoR832sDX/view?fbclid=IwAR03vgyyPNNpUor2RB8Su_K9XOx8yTrAinOmw64-PGTr8stShyzWDkHMaVM"
+      ],
+      "metadata": {
+        "id": "mlCiT8kMcdkW"
+      }
     }
   ]
 }
