--- a/midterm_bscdpdm23.ipynb
+++ b/midterm_bscdpdm23.ipynb
@@ -98,6 +98,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###อุณหภูมิตุ้มเเห้ง"
+      ],
+      "metadata": {
+        "id": "iO-AUkEmTJen"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#อุณหภูมิตุ้มเเห้ง\n",
@@ -105,44 +114,179 @@
         "Dry_temp_NakhonPhanom = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความกด(เปอร์เซ็นต์)/จ.นครพนม.xlsx\",header=4)\n",
         "Dry_temp_Sakon = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความกด(เปอร์เซ็นต์)/จ.สกลนคร.xlsx\",header=4)\n",
         "Dry_temp_NongKhai = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความกด(เปอร์เซ็นต์)/จ.หนองคาย.xlsx\",header=4)\n",
-        "Dry_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความกด(เปอร์เซ็นต์)/จ.เลย.xlsx\",header=4)\n",
+        "Dry_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความกด(เปอร์เซ็นต์)/จ.เลย.xlsx\",header=4)"
+      ],
+      "metadata": {
+        "id": "jOn3Qxu_TG40"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###อุณหภูมิต่ำสุด"
+      ],
+      "metadata": {
+        "id": "2Y0IO3chTPcz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#อุณหภูมิต่ำสุด\n",
         "lower_temp_KhonKaen = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความชื้นสัมพัทธ์(เปอร์เซ็นต์)/จ.ขอนแก่น.xlsx\",header=4)\n",
         "lower_temp_NakhonPhanom = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความชื้นสัมพัทธ์(เปอร์เซ็นต์)/จ.นครพนม.xlsx\",header=4)\n",
         "lower_temp_Sakon = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความชื้นสัมพัทธ์(เปอร์เซ็นต์)/จ.สกลนคร.xlsx\",header=4)\n",
         "lower_temp_NongKhai = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความชื้นสัมพัทธ์(เปอร์เซ็นต์)/จ.สกลนคร.xlsx\",header=4)\n",
-        "lower_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความชื้นสัมพัทธ์(เปอร์เซ็นต์)/จ.เลย.xlsx\",header=4)\n",
+        "lower_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความชื้นสัมพัทธ์(เปอร์เซ็นต์)/จ.เลย.xlsx\",header=4)"
+      ],
+      "metadata": {
+        "id": "iwusZLEZTPx6"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###อุณหภูมิจุดน้ำค้าง"
+      ],
+      "metadata": {
+        "id": "KVx-GCwiTaTY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "#อุณหภูมิจุดน้ำค้าง\n",
         "Dew_temp_KhonKaen = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความเร็วลม(นอต)/จ.ขอนแก่น.xlsx\",header=4)\n",
         "Dew_temp_NakhonPhanom = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความเร็วลม(นอต)/จ.นครพนม.xlsx\",header=4)\n",
         "Dew_temp_Sakon = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความเร็วลม(นอต)/จ.สกลนคร.xlsx\",header=4)\n",
         "Dew_temp_NongKhai = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความเร็วลม(นอต)/จ.หนองคาย.xlsx\",header=4)\n",
-        "Dew_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความเร็วลม(นอต)/จ.เลย.xlsx\",header=4)\n",
+        "Dew_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ความเร็วลม(นอต)/จ.เลย.xlsx\",header=4)"
+      ],
+      "metadata": {
+        "id": "iclrbN7yTagX"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###ความกดอากาศ"
+      ],
+      "metadata": {
+        "id": "EMD5KOkSThHa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "#ความกดอากาศ\n",
         "Airpressure_temp_KhonKaen = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/จำนวนเมฆ(10ส่วน)/จ.ขอนแก่น.xlsx\",header=4)\n",
         "Airpressure_temp_NakhonPhanom = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/จำนวนเมฆ(10ส่วน)/จ.นครพนม.xlsx\",header=4)\n",
         "Airpressure_temp_Sakon = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/จำนวนเมฆ(10ส่วน)/จ.สกลนคร.xlsx\",header=4)\n",
         "Airpressure_temp_NongKhai = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/จำนวนเมฆ(10ส่วน)/จ.หนองคาย.xlsx\",header=4)\n",
-        "Airpressure_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/จำนวนเมฆ(10ส่วน)/จ.เลย.xlsx\",header=4)\n",
-        "##้ครึ่ง\n",
+        "Airpressure_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/จำนวนเมฆ(10ส่วน)/จ.เลย.xlsx\",header=4)"
+      ],
+      "metadata": {
+        "id": "sbNTEGI1ThZZ"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###ความชื้นสัมพัทธ์"
+      ],
+      "metadata": {
+        "id": "l4F2QgRgTsxc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#ความชื้นสัมพัทธ์\n",
         "Rhumidity_temp_KhonKaen = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ปริมาณฝน(มิลลิเมตร)/จ.ขอนแก่น.xlsx\",header=4)\n",
         "Rhumidity_temp_NakhonPhanom = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ปริมาณฝน(มิลลิเมตร)/จ.นครพนม.xlsx\",header=4)\n",
         "Rhumidity_temp_Sakon = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ปริมาณฝน(มิลลิเมตร)/จ.สกล.xlsx\",header=4)\n",
         "Rhumidity_temp_NongKhai = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ปริมาณฝน(มิลลิเมตร)/จ.หนองคาย.xlsx\",header=4)\n",
-        "Rhumidity_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ปริมาณฝน(มิลลิเมตร)/จ.เลย.xlsx\",header=4)\n",
+        "Rhumidity_temp_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/ปริมาณฝน(มิลลิเมตร)/จ.เลย.xlsx\",header=4)"
+      ],
+      "metadata": {
+        "id": "LXCbrGKmTs8C"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###ความเร็วลม"
+      ],
+      "metadata": {
+        "id": "VovQR89GTy50"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#ความเร็วลม\n",
         "Wind_velocity_KhonKaen = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิจุดน้ำค้าง(เซลเซียส)/จ.ขอนแก่น.xlsx\",header=4)\n",
         "Wind_velocity_NakhonPhanom = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิจุดน้ำค้าง(เซลเซียส)/จ.นครพนม.xlsx\",header=4)\n",
         "Wind_velocity_Sakon = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิจุดน้ำค้าง(เซลเซียส)/จ.สกล.xlsx\",header=4)\n",
         "Wind_velocity_NongKhai = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิจุดน้ำค้าง(เซลเซียส)/จ.หนองคาย.xlsx\",header=4)\n",
-        "Wind_velocity_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิจุดน้ำค้าง(เซลเซียส)/จ.เลย.xlsx\",header=4)\n",
+        "Wind_velocity_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิจุดน้ำค้าง(เซลเซียส)/จ.เลย.xlsx\",header=4)"
+      ],
+      "metadata": {
+        "id": "FZSEyq3JT0sE"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###จำนวนเมฆ"
+      ],
+      "metadata": {
+        "id": "bLYIlY-ZT-ls"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#จำนวนเมฆ\n",
         "Clouds_KhonKaen = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิตุ้มแห้ง(เซลเซียส)/จ.ขอนแก่น.xlsx\",header=4,dtype={'Unnamed: 34':int})\n",
         "Clouds_NakhonPhanom = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิตุ้มแห้ง(เซลเซียส)/จ.นครพนม.xlsx\",header=4,dtype={'Unnamed: 34':int})\n",
         "Clouds_Sakon = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิตุ้มแห้ง(เซลเซียส)/จ.สกล.xlsx\",header=4,dtype={'Unnamed: 34':int})\n",
         "Clouds_NongKhai = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิตุ้มแห้ง(เซลเซียส)/จ.หนองคาย.xlsx\",header=4,dtype={'Unnamed: 34':int})\n",
-        "Clouds_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิตุ้มแห้ง(เซลเซียส)/จ.เลย.xlsx\",header=4,dtype={'Unnamed: 34':int})\n",
+        "Clouds_loei = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิตุ้มแห้ง(เซลเซียส)/จ.เลย.xlsx\",header=4,dtype={'Unnamed: 34':int})"
+      ],
+      "metadata": {
+        "id": "hwFRPkuAT-wA"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###ปริมาณน้ำฝน"
+      ],
+      "metadata": {
+        "id": "dpDH5Nc3UGq4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "\n",
         "#ปริมาณน้ำฝน\n",
         "Rainfall_KhonKaen = pd.read_excel(\"/content/drive/MyDrive/mid term  bdsm/อุณหภูมิต่ำสุด(เซลเซียส)/จ.ขอนแก่น.xlsx\",header=4)\n",
@@ -155,7 +299,7 @@
       "metadata": {
         "id": "tycWHIA7r4jj"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
